--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,6 +7,8 @@
     <title>{{page.title}} - FilmRater</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="site">
