--- a/_assets/scss/site.scss
+++ b/_assets/scss/site.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'reset';
 @import 'typography';
+@import 'mixins';
 @import 'animations';
 @import 'home';
 @import 'about';
